# exchange

./: Vagrantfile  init-vm.sh
.vagrant/machines/gateway1/docker/: action_provision  id  index_uuid  private_key  synced_folders
.vagrant/machines/ome1/docker/: action_provision  id  index_uuid  private_key  synced_folders
.vagrant/machines/order-matching-engine/docker/: index_uuid
.vagrant/machines/tp1/docker/: action_provision  docker_build_image  id  index_uuid  private_key  synced_folders
order-matching-engine/: .gitmodules  CMakeLists.txt  Doxyfile  README.md
order-matching-engine/.vagrant/machines/ome1/docker/: vagrant_cwd
order-matching-engine/lib/: CMakeLists.txt
order-matching-engine/main/: byte_swap.cpp  dll_main.cpp  main.cpp  multicast_receiver.cpp  multicast_sender.cpp  ome_main.cpp  orderbook_main.cpp  spscqueue_main.cpp  symbols.txt  tcp_client.cpp  tcp_server.cpp  timer_main.cpp  unordered_dense_main.cpp
order-matching-engine/src/: CMakeLists.txt
order-matching-engine/src/doublylinkedlist/: dll.h  dll.hpp  dll_iterator.hpp  util_ptr.h
order-matching-engine/src/order_matching_engine/: machine_time.cpp  machine_time.h  order_matching_engine.cpp  order_matching_engine.h  util.cpp  util.h
order-matching-engine/src/orderbook/: orderbook.cpp  orderbook.h  orderbook_print.cpp
order-matching-engine/src/parser/: parser.cpp  parser.h
order-matching-engine/src/struct/: nasdaq_itch.h  nasdaq_ouch.h  structs.h
order-matching-engine/tests/: CMakeLists.txt  test_dll.cpp  test_order_matching_engine.cpp  test_orderbook.cpp  test_parser.cpp  test_struct_order.cpp
order-matching-engine/tests/files/: ome1_orderbooks_sym.txt  ome2_orderbooks_sym.txt
